# AxumPress

./: Cargo.toml  README.md  build.sh  config.toml
content/: hello.md  index.md  learning-rust-part-1.md  learning-rust-part-2.md  learning-rust-part-3.md  part1.md  part2.md  part3.md  part4.md
output/: index.html
output/about/: about.html
output/blog/: hello.html  index.html  part1.html  part2.html  part3.html  part4.html
output/content/: index.html  learning-rust-part-1.html  learning-rust-part-2.html  learning-rust-part-3.html
output/css/: style.css
src/: builder.rs  cli.rs  config.rs  generator.rs  main.rs  markdown.rs  models.rs  server.rs  toml_config.rs
src/.cph/: .main.rs_cbca21636f322f1e1cdf9218ca8242e4.prob
static/: styles.css
templates/: 404.html  about.html  about_template.html  base.html  blog.js  blog_index.html  home-template.html  home.html  index.html  main.js  post_detail.html  styels-warm.css  styles-dark.css  styles-dracula.css  styles-minimal.css  styles-nature.css  styles-neon.css  styles-porcif.css  styles-retro.css  styles.css  template-1.html
