[package]
name = "axumpress"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
askama = "0.12"
walkdir = "2.5"
pulldown-cmark = "0.9"
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.5", features = ["fs"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"