[package]
name = "axumpress"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
askama = "0.12"
walkdir = "2.5"
pulldown-cmark = "0.9"
serde = { version = "1.0", features = ["derive", "serde_derive"] }
tower-http = { version = "0.5", features = ["fs"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
toml = "0.8.21"
comrak = "0.11"
rand = "0.9.1"
